<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="pokemon"
            type="com.example.siberstesttask.model.PokemonModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">
    <com.example.siberstesttask.ui.GroupTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:labelText="@string/name_label"
        app:valueText="@{pokemon.name}"/>
    <com.example.siberstesttask.ui.GroupTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:labelText="@string/base_exp_label"
        app:valueText="@{Integer.toString(pokemon.baseExperience)}"/>
    <com.example.siberstesttask.ui.GroupTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:labelText="@string/height_label"
        app:valueText="@{Integer.toString(pokemon.height)}"/>
    <com.example.siberstesttask.ui.GroupTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:labelText="@string/weight_label"
        app:valueText="@{Integer.toString(pokemon.weight)}"/>
    <com.example.siberstesttask.ui.GroupTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:labelText="@string/attack_label"
        app:valueText="@{Integer.toString(pokemon.attack)}"/>
    <com.example.siberstesttask.ui.GroupTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:labelText="@string/defense_label"
        app:valueText="@{Integer.toString(pokemon.defense)}"/>
    <com.example.siberstesttask.ui.GroupTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:labelText="@string/hp_label"
        app:valueText="@{Integer.toString(pokemon.hp)}"/>
    <com.example.siberstesttask.ui.GroupTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        app:labelText="@string/types_label"
        app:valueText="@{pokemon.types.toString()}"/>
    <com.example.siberstesttask.ui.GroupTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:labelText="@string/forms_label"
        app:valueText="@{pokemon.forms.toString()}"/>
</LinearLayout>
</layout>