<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="4dp"
    android:contentDescription="@string/pokemon_item_description">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_view_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/pokemon_picture_description" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:padding="16dp"
            android:orientation="vertical">
            <com.example.siberstesttask.ui.GroupTextView
                android:id="@+id/group_text_view_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/name_label"/>
            <com.example.siberstesttask.ui.GroupTextView
                android:id="@+id/group_text_view_attack"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/attack_label"/>
            <com.example.siberstesttask.ui.GroupTextView
                android:id="@+id/group_text_view_defense"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/defense_label"/>
            <com.example.siberstesttask.ui.GroupTextView
                android:id="@+id/group_text_view_hp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:labelText="@string/hp_label"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
