<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">
    <Button
        android:id="@+id/button_reinitialize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_reinitialize" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/attack_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/attack_label" />
        <CheckBox
            android:id="@+id/defense_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/defense_label" />
        <CheckBox
            android:id="@+id/hp_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hp_label" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokemon_list_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>